--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body {
   max-width: 2400px;
   padding: 35px;
+  background-color: rgb(199, 197, 197);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
