--- a/src/pages/searchMovies.module.css
+++ b/src/pages/searchMovies.module.css
@@ -1,17 +1,78 @@
+.searchWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 50px;
+}
 .moviesWrapper {
-  max-width: 2400px;
+  margin: 0 auto;
 }
 
 .moviesList {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .listItem {
-  /* border: 1px solid rgb(190, 188, 188); */
-
+  margin-left: 10px;
+  margin-right: 20px;
   margin-bottom: 20px;
 }
-.listItem:not(:nth-child(6n + 1)) {
-  margin-left: 20px;
+
+.SearchForm {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 600px;
+  background-color: #fff;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.SearchFormButton {
+  display: inline-block;
+  width: 48px;
+  height: 48px;
+  border: 0;
+  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.6;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  outline: none;
+}
+
+.SearchFormButton:hover {
+  opacity: 1;
+}
+
+.SearchFormButtonLabel {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  clip-path: inset(50%);
+  border: 0;
+}
+
+.SearchFormInput {
+  display: inline-block;
+  width: 100%;
+  font: inherit;
+  font-size: 20px;
+  border: none;
+  outline: none;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.SearchFormInput::placeholder {
+  font: inherit;
+  font-size: 18px;
 }
