--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-  margin-left: 30px;
   margin-top: 30px;
 }
 .active {
@@ -7,6 +6,8 @@
 }
 
 .navigation {
+  margin: 0 auto;
+  width: 100px;
   margin-bottom: 20px;
 }
 .navigationItem {
