--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  max-width: 2400px;
-  padding: 35px;
   background-color: rgb(199, 197, 197);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -22,4 +20,8 @@ code {
 a {
   color: black;
   text-decoration: none;
+}
+ul {
+  list-style: none;
+  padding: 0;
 }
