--- a/src/pages/homePage.module.css
+++ b/src/pages/homePage.module.css
@@ -5,12 +5,20 @@
   text-align: center;
 }
 .moviesList {
+  display: grid;
+  max-width: calc(100vw - 48px);
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+
+  grid-gap: 10px;
+  margin-top: 20px;
+  margin-bottom: 0;
+  padding: 0;
   list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  column-gap: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .listItem {
-  margin-bottom: 20px;
+  /* margin-left: 10px;
+  margin-right: 10px; */
+  /* margin-bottom: 20px; */
 }
