--- a/src/pages/HomePage/homePage.module.css
+++ b/src/pages/HomePage/homePage.module.css
@@ -18,6 +18,8 @@
   margin-right: auto;
 }
 .listItem {
+  width: 340px;
+  box-shadow: 3px 1px 15px 5px rgba(0, 0, 0, 0.24);
   /* margin-left: 10px;
   margin-right: 10px; */
   /* margin-bottom: 20px; */
