--- a/src/pages/SearchMovies/searchMovies.module.css
+++ b/src/pages/SearchMovies/searchMovies.module.css
@@ -21,6 +21,8 @@
   margin-right: auto;
 }
 .listItem {
+  width: 340px;
+  box-shadow: 3px 1px 15px 5px rgba(0, 0, 0, 0.24);
   /* margin-left: 10px;
   margin-right: 20px; */
   /* margin-bottom: 20px; */
