--- a/src/pages/MovieDetails/movieDetails.module.css
+++ b/src/pages/MovieDetails/movieDetails.module.css
@@ -7,14 +7,14 @@
 .movieCardWrapper {
   margin-left: 40px;
 }
-.additionalInfo {
+.additionalInfoButton {
   text-align: center;
   background-color: aliceblue;
-  /* display: block; */
   width: 80px;
   border-radius: 5px;
   margin-bottom: 10px;
   padding: 10px;
+  cursor: pointer;
 }
 .arrow {
   position: relative;
@@ -22,6 +22,7 @@
   height: 30px;
   border: 3px solid gray;
   border-radius: 50%;
+  cursor: pointer;
 }
 .arrow:after {
   position: absolute;
